Bug 1659053 - Restore or remove the origin directory if its directory name is inconsistent with the origin in the directory metadta file; r=janv, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D88025